<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_account"
            android:icon="@mipmap/ic_person_black_24dp"
            android:checkable="false"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/menu_vehiculos"
            android:icon="@mipmap/ic_add_circle_black_24dp"
            android:checkable="false"
            android:title="@string/menu_vehiculos" />
        <item
            android:id="@+id/menu_logout"
            android:icon="@mipmap/ic_phonelink_lock_black_24dp"
            android:checkable="false"
            android:title="@string/menu_logout" />
    </group>

</menu>