<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    tools:context="ec.ricardo.com.ventaautos.AddActivity"
    android:paddingTop="15dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/txtSecuencial"
        style="@style/editText_style"
        android:inputType="textPersonName"
        android:hint="@string/secuencial" />

    <EditText
        android:id="@+id/txtNombre"
        style="@style/editText_style"
        android:inputType="textPersonName"
        android:hint="@string/placa" />

    <EditText
        android:id="@+id/txtPlaca"
        style="@style/editText_style"
        android:inputType="textPersonName"
        android:hint="@string/placa" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ingresar"
        style="@style/button_style"/>

    <fragment
        android:id="@+id/fragment"
        android:name="ec.ricardo.com.ventaautos.AddActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
